API/18-12-2023/stderr.log
Error updating data: { Error: ER_BAD_FIELD_ERROR: Unknown column 'hours' in 'field list'
    at Query.Sequence._packetToError (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/mysql/lib/protocol/sequences/Sequence.js:47:14)
    at Query.ErrorPacket (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/mysql/lib/protocol/sequences/Query.js:79:18)
    at Protocol._parsePacket (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/mysql/lib/protocol/Protocol.js:291:23)
    at Parser._parsePacket (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/mysql/lib/protocol/Parser.js:433:10)
    at Parser.write (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/mysql/lib/protocol/Parser.js:43:10)
    at Protocol.write (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/mysql/lib/protocol/Protocol.js:38:16)
    at Socket.<anonymous> (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/mysql/lib/Connection.js:88:28)
    at Socket.<anonymous> (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/mysql/lib/Connection.js:526:10)
    at Socket.emit (events.js:198:13)
    at addChunk (_stream_readable.js:288:12)
    --------------------
    at Protocol._enqueue (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/mysql/lib/protocol/Protocol.js:144:48)
    at Connection.query (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/mysql/lib/Connection.js:198:25)
    at Query.db.query (/home/graphig/QuickMake/models/api/UpdateTechnology.js:27:10)
    at Query.<anonymous> (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/mysql/lib/Connection.js:526:10)
    at Query._callback (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/mysql/lib/Connection.js:488:16)
    at Query.Sequence.end (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/mysql/lib/protocol/sequences/Sequence.js:83:24)
    at Query._handleFinalResultPacket (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/mysql/lib/protocol/sequences/Query.js:149:8)
    at Query.EofPacket (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/mysql/lib/protocol/sequences/Query.js:133:8)
    at Protocol._parsePacket (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/mysql/lib/protocol/Protocol.js:291:23)
    at Parser._parsePacket (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/mysql/lib/protocol/Parser.js:433:10)
  code: 'ER_BAD_FIELD_ERROR',
  errno: 1054,
  sqlMessage: 'Unknown column \'hours\' in \'field list\'',
  sqlState: '42S22',
  index: 0,
  sql:
   'UPDATE technology SET technology = \'PHP.js\', hours = 11 WHERE id = 1' }
Error updating data: { Error: ER_BAD_FIELD_ERROR: Unknown column 'hours' in 'field list'
    at Query.Sequence._packetToError (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/mysql/lib/protocol/sequences/Sequence.js:47:14)
    at Query.ErrorPacket (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/mysql/lib/protocol/sequences/Query.js:79:18)
    at Protocol._parsePacket (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/mysql/lib/protocol/Protocol.js:291:23)
    at Parser._parsePacket (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/mysql/lib/protocol/Parser.js:433:10)
    at Parser.write (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/mysql/lib/protocol/Parser.js:43:10)
    at Protocol.write (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/mysql/lib/protocol/Protocol.js:38:16)
    at Socket.<anonymous> (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/mysql/lib/Connection.js:88:28)
    at Socket.<anonymous> (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/mysql/lib/Connection.js:526:10)
    at Socket.emit (events.js:198:13)
    at addChunk (_stream_readable.js:288:12)
    --------------------
    at Protocol._enqueue (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/mysql/lib/protocol/Protocol.js:144:48)
    at Connection.query (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/mysql/lib/Connection.js:198:25)
    at Query.db.query (/home/graphig/QuickMake/models/api/UpdateTechnology.js:27:10)
    at Query.<anonymous> (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/mysql/lib/Connection.js:526:10)
    at Query._callback (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/mysql/lib/Connection.js:488:16)
    at Query.Sequence.end (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/mysql/lib/protocol/sequences/Sequence.js:83:24)
    at Query._handleFinalResultPacket (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/mysql/lib/protocol/sequences/Query.js:149:8)
    at Query.EofPacket (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/mysql/lib/protocol/sequences/Query.js:133:8)
    at Protocol._parsePacket (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/mysql/lib/protocol/Protocol.js:291:23)
    at Parser._parsePacket (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/mysql/lib/protocol/Parser.js:433:10)
  code: 'ER_BAD_FIELD_ERROR',
  errno: 1054,
  sqlMessage: 'Unknown column \'hours\' in \'field list\'',
  sqlState: '42S22',
  index: 0,
  sql:
   'UPDATE technology SET technology = \'PHP.js\', hours = 11 WHERE id = 1' }
SyntaxError: Unexpected token } in JSON at position 54
    at JSON.parse (<anonymous>)
    at parse (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/body-parser/lib/types/json.js:89:19)
    at /home/graphig/nodevenv/QuickMake/10/lib/node_modules/body-parser/lib/read.js:128:18
    at AsyncResource.runInAsyncScope (async_hooks.js:188:21)
    at invokeCallback (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/raw-body/index.js:231:16)
    at done (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/raw-body/index.js:220:7)
    at IncomingMessage.onEnd (/home/graphig/nodevenv/QuickMake/10/lib/node_modules/raw-body/index.js:280:7)
    at IncomingMessage.emit (events.js:203:15)
    at endReadableNT (_stream_readable.js:1145:12)
    at process._tickCallback (internal/process/next_tick.js:63:19)
/home/graphig/QuickMake/app.js:49
app.use('/api/DeleteTechnology', DeleteTechnologyRoutes(db));
                                 ^

TypeError: DeleteTechnologyRoutes is not a function
    at Object.<anonymous> (/home/graphig/QuickMake/app.js:49:34)
    at Module._compile (internal/modules/cjs/loader.js:778:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:789:10)
    at Module.load (internal/modules/cjs/loader.js:653:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:593:12)
    at Function.Module._load (internal/modules/cjs/loader.js:585:3)
    at Module.require (internal/modules/cjs/loader.js:692:17)
    at require (internal/modules/cjs/helpers.js:25:18)
    at startApplication (/usr/local/lsws/fcgi-bin/lsnode.js:48:15)
    at Object.<anonymous> (/usr/local/lsws/fcgi-bin/lsnode.js:16:1)
/home/graphig/QuickMake/app.js:49
app.use('/api/DeleteTechnology', DeleteTechnologyRoutes(db));
                                 ^

TypeError: DeleteTechnologyRoutes is not a function
    at Object.<anonymous> (/home/graphig/QuickMake/app.js:49:34)
    at Module._compile (internal/modules/cjs/loader.js:778:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:789:10)
    at Module.load (internal/modules/cjs/loader.js:653:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:593:12)
    at Function.Module._load (internal/modules/cjs/loader.js:585:3)
    at Module.require (internal/modules/cjs/loader.js:692:17)
    at require (internal/modules/cjs/helpers.js:25:18)
    at startApplication (/usr/local/lsws/fcgi-bin/lsnode.js:48:15)
    at Object.<anonymous> (/usr/local/lsws/fcgi-bin/lsnode.js:16:1)
